// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package sqlcgen

import (
	"net/netip"

	"github.com/jackc/pgx/v5/pgtype"
)

type Assessment struct {
	ID                    int32              `json:"id"`
	Fbs                   pgtype.Numeric     `json:"fbs"`
	Hba1c                 pgtype.Numeric     `json:"hba1c"`
	Cholesterol           pgtype.Int4        `json:"cholesterol"`
	Ldl                   pgtype.Int4        `json:"ldl"`
	Hdl                   pgtype.Int4        `json:"hdl"`
	Triglycerides         pgtype.Int4        `json:"triglycerides"`
	Systolic              pgtype.Int4        `json:"systolic"`
	Diastolic             pgtype.Int4        `json:"diastolic"`
	Activity              pgtype.Text        `json:"activity"`
	HistoryFlag           pgtype.Bool        `json:"history_flag"`
	Smoking               pgtype.Text        `json:"smoking"`
	Hypertension          pgtype.Text        `json:"hypertension"`
	HeartDisease          pgtype.Text        `json:"heart_disease"`
	Bmi                   pgtype.Numeric     `json:"bmi"`
	Cluster               pgtype.Text        `json:"cluster"`
	RiskScore             pgtype.Int4        `json:"risk_score"`
	ModelVersion          pgtype.Text        `json:"model_version"`
	DatasetHash           pgtype.Text        `json:"dataset_hash"`
	ValidationStatus      pgtype.Text        `json:"validation_status"`
	CreatedAt             pgtype.Timestamptz `json:"created_at"`
	UpdatedAt             pgtype.Timestamptz `json:"updated_at"`
	UserID                pgtype.Int4        `json:"user_id"`
	IsSelfReported        bool               `json:"is_self_reported"`
	Source                string             `json:"source"`
	Notes                 pgtype.Text        `json:"notes"`
	PredictedStatus       pgtype.Text        `json:"predicted_status"`
	RiskLabel             pgtype.Text        `json:"risk_label"`
	ClusterDescription    pgtype.Text        `json:"cluster_description"`
	TreatmentFocus        pgtype.Text        `json:"treatment_focus"`
	AtRiskProbability     pgtype.Float8      `json:"at_risk_probability"`
	WaistCircumference    pgtype.Numeric     `json:"waist_circumference"`
	RaceEthnicity         pgtype.Int2        `json:"race_ethnicity"`
	FamilyHistoryDiabetes bool               `json:"family_history_diabetes"`
}

type AuditEvent struct {
	ID         int32              `json:"id"`
	Actor      pgtype.Text        `json:"actor"`
	Action     pgtype.Text        `json:"action"`
	TargetType pgtype.Text        `json:"target_type"`
	TargetID   pgtype.Int4        `json:"target_id"`
	Details    []byte             `json:"details"`
	CreatedAt  pgtype.Timestamptz `json:"created_at"`
}

// Authentication event logs for real-time admin monitoring
type AuthEvent struct {
	ID pgtype.UUID `json:"id"`
	// Type of auth event: login, logout, failed_login, token_refresh
	EventType string `json:"event_type"`
	// User email (optional for failed logins)
	Email pgtype.Text `json:"email"`
	// Client IP address
	IpAddress *netip.Addr `json:"ip_address"`
	// Browser user agent string
	UserAgent pgtype.Text `json:"user_agent"`
	// Whether the event was successful
	Success bool `json:"success"`
	// Parsed device information (browser, os, device)
	DeviceInfo []byte `json:"device_info"`
	// Geolocation data (country, city, lat, long)
	Location []byte `json:"location"`
	// Additional event-specific data (failure_reason, session_id, etc.)
	Metadata  []byte             `json:"metadata"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
}

type Clinic struct {
	ID        int32              `json:"id"`
	Name      string             `json:"name"`
	Address   pgtype.Text        `json:"address"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
	UpdatedAt pgtype.Timestamptz `json:"updated_at"`
}

type EmailVerificationToken struct {
	ID        int32              `json:"id"`
	UserID    int32              `json:"user_id"`
	TokenHash string             `json:"token_hash"`
	ExpiresAt pgtype.Timestamptz `json:"expires_at"`
	UsedAt    pgtype.Timestamptz `json:"used_at"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
}

type ModelRun struct {
	ID           int32              `json:"id"`
	ModelVersion string             `json:"model_version"`
	DatasetHash  pgtype.Text        `json:"dataset_hash"`
	Notes        pgtype.Text        `json:"notes"`
	CreatedAt    pgtype.Timestamptz `json:"created_at"`
}

type NotificationQueue struct {
	ID               int32              `json:"id"`
	UserID           int32              `json:"user_id"`
	NotificationType string             `json:"notification_type"`
	Subject          string             `json:"subject"`
	Body             string             `json:"body"`
	Priority         int32              `json:"priority"`
	ScheduledFor     pgtype.Timestamptz `json:"scheduled_for"`
	SentAt           pgtype.Timestamptz `json:"sent_at"`
	Status           string             `json:"status"`
	ErrorMessage     pgtype.Text        `json:"error_message"`
	CreatedAt        pgtype.Timestamptz `json:"created_at"`
}

type PasswordResetToken struct {
	ID        int32              `json:"id"`
	UserID    int32              `json:"user_id"`
	TokenHash string             `json:"token_hash"`
	ExpiresAt pgtype.Timestamptz `json:"expires_at"`
	UsedAt    pgtype.Timestamptz `json:"used_at"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
}

type RefreshToken struct {
	ID        int32              `json:"id"`
	UserID    int32              `json:"user_id"`
	TokenHash string             `json:"token_hash"`
	ExpiresAt pgtype.Timestamptz `json:"expires_at"`
	Revoked   bool               `json:"revoked"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
	RevokedAt pgtype.Timestamptz `json:"revoked_at"`
}

type User struct {
	ID                           int32              `json:"id"`
	Email                        string             `json:"email"`
	PasswordHash                 string             `json:"password_hash"`
	CreatedAt                    pgtype.Timestamptz `json:"created_at"`
	UpdatedAt                    pgtype.Timestamptz `json:"updated_at"`
	IsActive                     bool               `json:"is_active"`
	LastLoginAt                  pgtype.Timestamptz `json:"last_login_at"`
	CreatedBy                    pgtype.Int4        `json:"created_by"`
	FirstName                    pgtype.Text        `json:"first_name"`
	LastName                     pgtype.Text        `json:"last_name"`
	DateOfBirth                  pgtype.Date        `json:"date_of_birth"`
	Phone                        pgtype.Text        `json:"phone"`
	Address                      pgtype.Text        `json:"address"`
	MenopauseStatus              pgtype.Text        `json:"menopause_status"`
	MenopauseType                pgtype.Text        `json:"menopause_type"`
	YearsMenopause               pgtype.Int4        `json:"years_menopause"`
	Hypertension                 pgtype.Text        `json:"hypertension"`
	HeartDisease                 pgtype.Text        `json:"heart_disease"`
	SmokingStatus                pgtype.Text        `json:"smoking_status"`
	ConsentPersonalData          bool               `json:"consent_personal_data"`
	ConsentResearchParticipation bool               `json:"consent_research_participation"`
	ConsentEmailUpdates          bool               `json:"consent_email_updates"`
	ConsentAnalytics             bool               `json:"consent_analytics"`
	ConsentUpdatedAt             pgtype.Timestamptz `json:"consent_updated_at"`
	AssessmentFrequencyMonths    int32              `json:"assessment_frequency_months"`
	ReminderEmail                bool               `json:"reminder_email"`
	LastAssessmentReminderSent   pgtype.Timestamptz `json:"last_assessment_reminder_sent"`
	OnboardingCompleted          bool               `json:"onboarding_completed"`
	AccountStatus                string             `json:"account_status"`
	DeletedAt                    pgtype.Timestamptz `json:"deleted_at"`
	IsAdmin                      bool               `json:"is_admin"`
	EmailVerified                bool               `json:"email_verified"`
	EmailVerifiedAt              pgtype.Timestamptz `json:"email_verified_at"`
	Role                         string             `json:"role"`
	PhysicalActivity             pgtype.Text        `json:"physical_activity"`
	Alcohol                      pgtype.Text        `json:"alcohol"`
}

type UserClinic struct {
	UserID    int32              `json:"user_id"`
	ClinicID  int32              `json:"clinic_id"`
	Role      string             `json:"role"`
	CreatedAt pgtype.Timestamptz `json:"created_at"`
}
